@@ -17,12 +17,6 @@
   <constraints>
      <constraint sense="true">
       <make>Lexmark</make>
-      <model>Z31</model>
-      <driver>lxm3200</driver>
-      <arg_defval>ev/850</arg_defval>
-     </constraint>
-     <constraint sense="true">
-      <make>Lexmark</make>
       <model>Z32</model>
       <driver>lxm3200</driver>
       <arg_defval>ev/850</arg_defval>
@@ -36,12 +30,6 @@
      <constraint sense="true">
       <driver>lxm3200</driver>
       <arg_defval>ev/849</arg_defval>
-     </constraint>
-     <constraint sense="true">
-      <make>Lexmark</make>
-      <model>Z31</model>
-      <driver>lxm3200-tweaked</driver>
-      <arg_defval>ev/850</arg_defval>
      </constraint>
      <constraint sense="true">
       <make>Lexmark</make>
@@ -74,11 +62,6 @@
     </ev_shortname>
     <ev_driverval>0</ev_driverval>
     <constraints>
-     <constraint sense="false">
-      <make>Lexmark</make>
-      <model>Z31</model>
-      <arg_defval>na</arg_defval>
-     </constraint>
      <constraint sense="false">
       <make>Lexmark</make>
       <model>Z32</model>
