@@ -2,6 +2,9 @@
 
 	* printer/Epson-PM_970C.xml: Added Epson PM 970C printer.
 
+	* opt/132.xml: Allowed uni-directional printing on the Lexmark Z31
+	  with the "lxm3200-tweaked" driver and made this the default.
+
 2003-03-27  Till Kamppeter <till.kamppeter@gmx.net>
 
 	* printer/100576.xml, printer/100704.xml, printer/101152.xml,
